got stuck on some bugs so i got a little ahead of commits but i finihsed render function for individual team info and did some styling

--- a/styles/global.css
+++ b/styles/global.css
@@ -52,3 +52,18 @@ main {
 .teams-container img {
     width: 200px;
 }
+
+.teams-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.individual-team {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: solid 2px black;
+    margin: 100px;
+}
